# icu-demos

./: .cvsignore  .dockerignore  .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  configure.mk  icuapps.mk.in  mkinstalldirs
.github/workflows/: icu4c.yml  icu4j.yml  upload-on-tag.yml
CSharp/PerformanceTest/: PerformanceTest.sln  Readme.txt
CSharp/conversion/: AssemblyInfo.cs  Conversion.csproj  ConversionForm.cs  ConversionForm.resx  UVersion.cs
CSharp/genicuwrapper/: AssemblyInfo.cs  GenICUWrapper.cs  genicuwrapper.csproj  genicuwrapper.sln  readme.txt
WinTZ/: .classpath  .project
XMLConverter/: Makefile.in  XMLConverter.cpp
XMLConverter/samples/: ibm-1112.xml  ibm-37.xml  pr-xml-utf-16.xml  x.xml
all/: all.dsw  all.sln  allapps.dsp
apputil/: .cvsignore  Makefile.in  apputil.vcproj  apputil.vcxproj  apputil.vcxproj.filters  demo_config.h.in  demo_settings.h  demoutil.cpp  demoutil.h  tmplutil.cpp  tmplutil.h
apputil/data/: common-footer.html  common-leftnav.html  common-masthead.html  icu.css  main.css
convexp/: .cvsignore  Makefile.in  convexp-header.html  convexp.cpp  convexp.dsp  convexp.vcproj  convexp.vcxproj  convexp.vcxproj.filters  params.cpp  params.h  printcp.cpp  printcp.h
datacustom/: Makefile.in  README  build.xml
datacustom/data/: datacustom-header.html  datacustom.xml
datacustom/gendatadep/: Makefile.in  datacustom-header.html  gendatadep.cpp  gendatadep.vcproj  gendatadep.vcxproj  gendatadep.vcxproj.filters  listmod.cpp  listmod.h  makedata.mak  ucmlocal.mk
dumpdat/: Makefile.in  README  dumpdat.c  dumpdat.dsp  dumpdat.dsw  dumpdat.vcproj
escapeabundle/: EscapeABundle.dsw  Makefile.in
genjp/: README.txt  genjp.cpp
icu-kube/: README.md  build.sh  index.html  lighttpd.conf
icu-kube/icuheaders/: README.md  cmemory.h
icu4j-applets/: Introduction.htm  README.md
icu4jweb/: .classpath  .project  Dockerfile  README.md  build-deploy.sh  build-docker.sh  pom.xml  push-deploy.sh  push.sh
icu4jweb/WebContent/: bidi.jsp  demohead.jsf  demolist.jsf  escaper.jsp  files.jsp  files_all.jsp  flexTest.jsp  (+13 more)
icudemos/: Makefile.in  icu_v2.css  icudemos-content-templ.html  icudemos-page-templ.html  icudemos.cpp  icudemos.mk  icudemos.vcproj  icudemos.vcxproj  icudemos.vcxproj.filters  makedata.mak  root.txt
icufacts/: readme.txt
icusegments/: Makefile.in  icusegments.cpp  json.c  json.h  json.hxx  readme_libjson.txt  ulibrk.cpp  ulibrk.h
idnbrowser/: .cvsignore  Makefile.in  idna-header.html  idnbrowser.dsp  idnbrowser.vcproj  idnbrowser.vcxproj  idnbrowser.vcxproj.filters  idnbrwsr.cpp  idnbrwsr.h  parseqs.c  parseqs.h
iucsamples/: readme.txt
jle/: .project  readme.txt
locexp/: .cvsignore  Makefile.in  README  READMEWin32  calexp.c  cgimain.c  fcgimain.c  icudata.tgz  locexp.c  locexp.dsp  locexp.dsw  locexp.h  locexp.vcproj  locexp.vcxproj  locexp.vcxproj.filters  lx_hook.h  lxbrk.c  lxcgi.c  lxconv.c  lxdate.c  lxicir.c  lxlocale.c  lxnum.c  lxprint.c  lxregion.cpp  lxrun.c  lxshow.c  lxshow.cpp  lxshowloc.c  lxsort.c  srchexp.c  version.c  wfobject.c
locexp2/: Makefile.in  cgiutils.cpp  cgiutils.h  itmplhandler.cpp  lxmain.h  lxuser.h  lxutils.cpp  readme.txt  ufcgi.cpp  ufcgi.h  webhandler.cpp
nbrowser/: .cvsignore  Makefile.in  nbrowser.cpp  nbrowser.dsp  nbrowser.dsw  nbrowser.vcproj  nbrowser.vcxproj  nbrowser.vcxproj.filters  normalization-header.html
obsolete/: .cvsignore  Makefile.in  bidi.cpp  convert.cpp  obsolete.dsp  obsolete.dsw  obsolete.vcproj  obsolete.vcxproj  obsolete.vcxproj.filters  uchar_ob.c  ucol_ob.cpp  unistrob.cpp
rbbiperf/: Makefile.in  rbbiperf.c  readme
redemo/: Makefile.in  readme  redemo.cpp  redemo.html  redemo.vcproj  redemo.vcxproj  redemo.vcxproj.filters
roundmode/: dcfmtest_round.txt  round.css  round.html  roundmode.cpp
rtfcvrt/: Makefile.in  README  rtf.patch  rtficu.c  test.rtf
scompare/: .cvsignore  Makefile.in  scompare-content-templ.html  scompare-page-templ.html  scompare.cpp  scompare.html  scompare.sln  scompare.vcproj  scompare.vcxproj  scompare.vcxproj.filters
test/: Makefile.in
translitdemo/: Makefile  README  TemplateCGI.cpp  TemplateCGI.h  TextCache.cpp  TextCache.h  TextCacheTest.cpp  TextCacheTest.make  TransliteratorCGI.cpp  TransliteratorCGI.h  cstring.h  getcgi.c  hash.h  main.cpp  textcachetool.cpp  textcachetool.make  translitdemo.dsp  translitdemo.dsw  translitdemo.vcproj  translitdemo.vcxproj  translitdemo.vcxproj.filters  upload  util.cpp  util.h  uvector.cpp  uvector.h
ubrowse/: .cvsignore  .gitignore  Makefile.in  README  READMEWin32  extractStrings.sed  extractStringsUltra.sh  icons.c  icons.h  makedata.mak  root.txt  ubrowse-header.html  ubrowse.c  ubrowse.dsp  ubrowse.dsw  ubrowse.vcproj  ubrowse.vcxproj  ubrowse.vcxproj.filters
ucd/: Makefile.in  readme.txt  ucd.cpp  ucd.h  ucd.sln  ucd.vcproj  ucd.vcxproj  ucd.vcxproj.filters  ucdresult.cpp  ucdresult.h
uconv/: .cvsignore  Makefile.in  README  makedata.mak  root.txt  uconv.cpp  uconv.dsp  uwmsg.c
udata/: Makefile.in  cmemory.h  cstring.h  genccode.c  genccode.dsp  gencmn.c  gencmn.dsp  gennames.c  mkdll.bat  mkmap.bat  udata.c  udata.dsp  udata.dsw  udata.h  udatatest.c  umutex.h  unames.c  unames.h  unewdata.c  unewdata.dsp  unewdata.h
ufortune/: ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  ufortune.cpp  ufortune.h  ufortune.rc  ufortune.sln  ufortune.vcproj  ufortuneDlg.cpp  ufortuneDlg.h
ufortunecgi/: ReadMe.txt  parseqs.c  parseqs.h  ufortune.cpp  ufortunecgi.sln  ufortunecgi.vcproj
unescapeabundle/: Makefile.in  unescapeABundle.c  unescapeABundle.dsw
usort/: Makefile  Makefile.in  README
xlitomatic/: Makefile.in  README  dsource.cpp  dsource.h  filesource.cpp  filesource.h  testVars.sh  urlsource.cpp  urlsource.h  xlitomatic.cpp  xlitsource.cpp  xlitsource.h
xtradata/: Makefile.in  README  convrtrs.txt.patch  default.txt.patch  eo.txt  fetchOrigFiles  hi.txt  hi_IN.txt  ibm-943.ucm  ibm-954.ucm  id.txt  index.txt.patch  mt.txt  mt_MT.txt  ta.txt  ucmlocal.mk  usascii.ucm
(+442 files in other folders)
